feat(metering-point, end-of-supply): add date validation and disabled dates query for end of supply

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -1261,7 +1261,7 @@
       "dateLabel": "Specify cut-off date",
       "dateHint": "The cut-off date must be between 3 days from today and 60 days ahead.",
       "consequencesInfo": "Please note that when you initiate an end of supply, you are requesting to disconnect the electricity at the metering point.",
-      "confirmCheckbox": "I understand the consequences",
+      "confirmCheckbox": "Please note that when you initiate an end of supply, you are requesting to disconnect the electricity at the metering point.",
       "cancel": "Cancel",
       "submit": "Start end of supply",
       "submitSuccess": "End of supply submitted.",
