--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -807,7 +807,8 @@
       },
       "closed": "Afsluttet",
       "closeCaseButton": "Afslut sag",
-      "markAsUnreadButton": "Marker som ulæst"
+      "markAsUnreadButton": "Marker som ulæst",
+      "conversationCloseError": "Der opstod en fejl under afslutning af sagen"
     },
     "relatedMeteringPointsTitle": "Relaterede målepunkter",
     "relatedMeteringPointsLoading": "Henter relaterede målepunkter",
