--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -421,12 +421,12 @@
           "vatInclusiveGroupName": "VAT",
           "vatInclusive": "With VAT",
           "not_vatInclusive": "Without VAT",
-          "transparentInvoicingGroupName": "Transparent Invoicing",
+          "transparentInvoicingGroupName": "Transparent invoicing",
           "transparentInvoicing": "Subject to transparent invoicing",
           "not_transparentInvoicing": "Not subject to transparent invoicing",
-          "predictablePriceGroupName": "Predictable Price",
-          "predictablePrice": "Predictable price",
-          "not_predictablePrice": "Non-predictable price",
+          "spotDependingPriceGroupName": "Spot depending price",
+          "spotDependingPrice": "Spot depending price",
+          "not_spotDependingPrice": "Non-spot depending price",
           "missingPriceSeriesGroupName": "Price series",
           "missingPriceSeries": "Missing price series",
           "not_missingPriceSeries": "Has price series"
@@ -458,12 +458,12 @@
           "vat": "VAT",
           "withVat": "With VAT",
           "withoutVat": "Without VAT",
-          "transparentInvoicing": "Transparent Invoicing",
+          "transparentInvoicing": "Transparent invoicing",
           "withTransparentInvoicing": "Yes",
           "withoutTransparentInvoicing": "No",
-          "predictablePrice": "Predictable Price",
-          "withPredictablePrice": "Yes",
-          "withoutPredictablePrice": "No",
+          "spotDependingPrince": "Spot depending price",
+          "withSpotDependingPrince": "Yes",
+          "withoutSpotDependingPrince": "No",
           "validFrom": "Valid From",
           "cutoffDate": "Cut-off Date"
         },
@@ -524,6 +524,7 @@
       "owner": "Owner",
       "resolution": "Resolution",
       "transparentInvoicing": "Transparent Invoicing",
+      "spotDependingPrice": "Spot depending price",
       "vat": "VAT",
       "tabs": {
         "pricesLabel": "Prices",
