fix: metering point details - #2683 #2820

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -686,7 +686,7 @@
       },
       "status": {
         "CLOSED_DOWN": "Nedlagt",
-        "NEW": "Ny",
+        "NEW": "Nyoprettet",
         "CONNECTED": "Tilsluttet",
         "DISCONNECTED": "Afbrudt",
         "UNKNOWN": "Ukendt"
@@ -733,7 +733,8 @@
         "measureUnit": "Enhed",
         "product": "Produkt",
         "connectionDate": "Tilsluttet",
-        "closedDownDate": "Nedlagt"
+        "closedDownDate": "Nedlagt",
+        "disconnectedDate": "Afbrudt"
       },
       "customerContactDetails": {
         "title": "Kontakter",
