--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -960,37 +960,35 @@
         "FAS_CANCEL_WORKFLOW": "Net og el kan annullere workflow"
       },
       "steps": {
-        "BRS_002_REQUESTENDOFSUPPLY_V1_STEP_1": "Anmod om leveranceophør (RSM-005)",
-        "BRS_002_REQUESTENDOFSUPPLY_V1_STEP_2": "Godkend anmod om leveranceophør (RSM-005)",
-        "BRS_002_REQUESTENDOFSUPPLY_V1_STEP_3": "Afvis anmod om leveranceophør (RSM-005)",
-        "BRS_002_REQUESTENDOFSUPPLY_V1_STEP_4": "Anmodning om afbrydelse (RSM-020)",
+        "ENDOFSUPPLY_V1_STEP_1": "Anmod om leveranceophør (RSM-005)",
+        "ENDOFSUPPLY_V1_STEP_2": "Godkend anmod om leveranceophør (RSM-005)",
+        "ENDOFSUPPLY_V1_STEP_3": "Afvis anmod om leveranceophør (RSM-005)",
+        "ENDOFSUPPLY_V1_STEP_4": "Anmodning om afbrydelse (RSM-020)",
         "NEWMETERINGPOINT_V1_STEP_1": "Anmodning om oprettelse af målepunkt (RSM-021)",
         "NEWMETERINGPOINT_V1_STEP_2": "Godkendelse af oprettelse af målepunkt (RSM-021)",
-        "BRS_004_CREATEMETERINGPOINT_V1_STEP_1": "Anmodning om oprettelse af målepunkt (RSM-021)",
-        "BRS_004_CREATEMETERINGPOINT_V1_STEP_2": "Godkendelse af oprettelse af målepunkt (RSM-021)",
-        "BRS_004_CREATEMETERINGPOINT_V1_STEP_3": "Afvisning af oprettelse af målepunkt (RSM-021)",
-        "BRS_004_CREATEMETERINGPOINT_V1_STEP_4": "Information om nyt målepunkt (RSM-022)",
-        "BRS_004_CREATEMETERINGPOINT_V1_STEP_5": "Information om pristilknytning (RSM-031)",
-        "BRS_008_CONNECTMETERINGPOINT_V1_STEP_1": "Anmodning om tilslutning af målepunkt (RSM-021)",
-        "BRS_008_CONNECTMETERINGPOINT_V1_STEP_2": "Godkendelse af tilslutning af målepunkt (RSM-021)",
-        "BRS_008_CONNECTMETERINGPOINT_V1_STEP_3": "Afvisning af tilslutning af målepunkt (RSM-021)",
-        "BRS_008_CONNECTMETERINGPOINT_V1_STEP_4": "Information om tilslutning af målepunkt (RSM-022)",
-        "BRS_009_MOVEIN_V1_STEP_1": "Anmodning om tilflytning (RSM-001)",
-        "BRS_009_MOVEIN_V1_STEP_2": "Godkendelse af anmodning om tilflytning (RSM-001)",
-        "BRS_009_MOVEIN_V1_STEP_3": "Afvisning af anmodning om tilflytning (RSM-001)",
-        "BRS_009_MOVEIN_V1_STEP_4": "Information om målepunktsstamdata (RSM-022)",
-        "BRS_009_MOVEIN_V1_STEP_5": "Information om kundestamdata (RSM-028)",
-        "BRS_009_MOVEIN_V1_STEP_6": "Information om pristilknytninger (RSM-031)",
-        "BRS_009_MOVEIN_V1_STEP_7": "Anmodning om opdatering af kundestamdata (RSM-027)",
-        "BRS_009_MOVEIN_V1_STEP_8": "Godkendelse af opdatering af kundestamdata (RSM-027)",
-        "BRS_009_MOVEIN_V1_STEP_9": "Afvisning af opdatering af kundestamdata (RSM-027)",
-        "BRS_009_MOVEIN_V1_STEP_10": "Generisk information (RSM-004)",
-        "BRS_009_MOVEIN_V1_STEP_11": "Information om kundestamdata (RSM-028)",
-        "BRS_009_MOVEIN_V1_STEP_12": "Generisk information (RSM-004)",
-        "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_1": "Anmodning om opdatering af kundestamdata (RSM-027)",
-        "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_2": "Godkendelse af opdatering af kundestamdata (RSM-027)",
-        "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_3": "Afvisning af opdatering af kundestamdata (RSM-027)",
-        "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_4": "Information om kundestamdata (RSM-028)",
+        "NEWMETERINGPOINT_V1_STEP_3": "Afvisning af oprettelse af målepunkt (RSM-021)",
+        "NEWMETERINGPOINT_V1_STEP_4": "Information om nyt målepunkt (RSM-022)",
+        "NEWMETERINGPOINT_V1_STEP_5": "Information om pristilknytning (RSM-031)",
+        "CONNECTMETERINGPOINT_V1_STEP_1": "Anmodning om tilslutning af målepunkt (RSM-021)",
+        "CONNECTMETERINGPOINT_V1_STEP_2": "Godkendelse af tilslutning af målepunkt (RSM-021)",
+        "CONNECTMETERINGPOINT_V1_STEP_3": "Afvisning af tilslutning af målepunkt (RSM-021)",
+        "CONNECTMETERINGPOINT_V1_STEP_4": "Information om tilslutning af målepunkt (RSM-022)",
+        "CUSTOMERMOVEIN_V1_STEP_1": "Anmodning om tilflytning (RSM-001)",
+        "CUSTOMERMOVEIN_V1_STEP_2": "Godkendelse af anmodning om tilflytning (RSM-001)",
+        "CUSTOMERMOVEIN_V1_STEP_3": "Afvisning af anmodning om tilflytning (RSM-001)",
+        "CUSTOMERMOVEIN_V1_STEP_4": "Information om målepunktsstamdata (RSM-022)",
+        "CUSTOMERMOVEIN_V1_STEP_5": "Information om kundestamdata (RSM-028)",
+        "CUSTOMERMOVEIN_V1_STEP_6": "Information om pristilknytninger (RSM-031)",
+        "CUSTOMERMOVEIN_V1_STEP_7": "Anmodning om opdatering af kundestamdata (RSM-027)",
+        "CUSTOMERMOVEIN_V1_STEP_8": "Godkendelse af opdatering af kundestamdata (RSM-027)",
+        "CUSTOMERMOVEIN_V1_STEP_9": "Afvisning af opdatering af kundestamdata (RSM-027)",
+        "CUSTOMERMOVEIN_V1_STEP_10": "Generisk information (RSM-004)",
+        "CUSTOMERMOVEIN_V1_STEP_11": "Information om kundestamdata (RSM-028)",
+        "CUSTOMERMOVEIN_V1_STEP_12": "Generisk information (RSM-004)",
+        "UPDATEMASTERDATACONSUMER_V1_STEP_1": "Anmodning om opdatering af kundestamdata (RSM-027)",
+        "UPDATEMASTERDATACONSUMER_V1_STEP_2": "Godkendelse af opdatering af kundestamdata (RSM-027)",
+        "UPDATEMASTERDATACONSUMER_V1_STEP_3": "Afvisning af opdatering af kundestamdata (RSM-027)",
+        "UPDATEMASTERDATACONSUMER_V1_STEP_4": "Information om kundestamdata (RSM-028)",
         "UNKNOWN": "Ukendt trin"
       },
       "details": {
