--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -960,37 +960,37 @@
         "FAS_CANCEL_WORKFLOW": "Grid operator and electricity supplier can cancel workflow"
       },
       "steps": {
-        "BRS_002_REQUESTENDOFSUPPLY_V1_STEP_1": "Request end of supply (RSM-005)",
-        "BRS_002_REQUESTENDOFSUPPLY_V1_STEP_2": "Confirm end of supply (RSM-005)",
-        "BRS_002_REQUESTENDOFSUPPLY_V1_STEP_3": "Reject end of supply (RSM-005)",
-        "BRS_002_REQUESTENDOFSUPPLY_V1_STEP_4": "Notify cancellation of end of supply (RSM-020)",
+        "ENDOFSUPPLY_V1_STEP_1": "Request end of supply (RSM-005)",
+        "ENDOFSUPPLY_V1_STEP_2": "Confirm end of supply (RSM-005)",
+        "ENDOFSUPPLY_V1_STEP_3": "Reject end of supply (RSM-005)",
+        "ENDOFSUPPLY_V1_STEP_4": "Notify cancellation of end of supply (RSM-020)",
         "NEWMETERINGPOINT_V1_STEP_1": "Request for creation of metering point (RSM-021)",
         "NEWMETERINGPOINT_V1_STEP_2": "Confirmation of request for creation of metering point (RSM-021)",
-        "BRS_004_CREATEMETERINGPOINT_V1_STEP_1": "Request for creation of metering point (RSM-021)",
-        "BRS_004_CREATEMETERINGPOINT_V1_STEP_2": "Confirmation of request for creation of metering point (RSM-021)",
-        "BRS_004_CREATEMETERINGPOINT_V1_STEP_3": "Rejection of request for creation of metering point (RSM-021)",
-        "BRS_004_CREATEMETERINGPOINT_V1_STEP_4": "Notification of new metering point (RSM-022)",
-        "BRS_004_CREATEMETERINGPOINT_V1_STEP_5": "Notification of charge links (RSM-031)",
-        "BRS_008_CONNECTMETERINGPOINT_V1_STEP_1": "Request for connection of metering point (RSM-021)",
-        "BRS_008_CONNECTMETERINGPOINT_V1_STEP_2": "Confirmation of request for connection of metering point (RSM-021)",
-        "BRS_008_CONNECTMETERINGPOINT_V1_STEP_3": "Rejection of request for connection of metering point (RSM-021)",
-        "BRS_008_CONNECTMETERINGPOINT_V1_STEP_4": "Notification of connection of metering point (RSM-022)",
-        "BRS_009_MOVEIN_V1_STEP_1": "Request Change of Supplier (RSM-001)",
-        "BRS_009_MOVEIN_V1_STEP_2": "Confirm request Change of Supplier (RSM-001)",
-        "BRS_009_MOVEIN_V1_STEP_3": "Reject request Change of Supplier (RSM-001)",
-        "BRS_009_MOVEIN_V1_STEP_4": "Metering point master data information (RSM-022)",
-        "BRS_009_MOVEIN_V1_STEP_5": "Customer master data information (RSM-028)",
-        "BRS_009_MOVEIN_V1_STEP_6": "Price link information (RSM-031)",
-        "BRS_009_MOVEIN_V1_STEP_7": "Request update customer master data (RSM-027)",
-        "BRS_009_MOVEIN_V1_STEP_8": "Approve update customer master data (RSM-027)",
-        "BRS_009_MOVEIN_V1_STEP_9": "Reject update customer master data (RSM-027)",
-        "BRS_009_MOVEIN_V1_STEP_10": "Generic Notification (RSM-004)",
-        "BRS_009_MOVEIN_V1_STEP_11": "Characteristics of a Customer at an AP (RSM-028)",
-        "BRS_009_MOVEIN_V1_STEP_12": "Generic Notification (RSM-004)",
-        "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_1": "Request change customer characteristics (RSM-027)",
-        "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_2": "Approve change customer characteristics (RSM-027)",
-        "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_3": "Reject change customer characteristics (RSM-027)",
-        "BRS_015_CHANGECUSTOMERCHARACTERISTICS_V1_STEP_4": "Characteristics of a Customer at an AP (RSM-028)",
+        "NEWMETERINGPOINT_V1_STEP_3": "Request for creation of metering point (RSM-021)",
+        "NEWMETERINGPOINT_V1_STEP_4": "Confirmation of request for creation of metering point (RSM-021)",
+        "NEWMETERINGPOINT_V1_STEP_5": "Rejection of request for creation of metering point (RSM-021)",
+        "NEWMETERINGPOINT_V1_STEP_6": "Notification of new metering point (RSM-022)",
+        "NEWMETERINGPOINT_V1_STEP_7": "Notification of charge links (RSM-031)",
+        "CONNECTMETERINGPOINT_V1_STEP_1": "Request for connection of metering point (RSM-021)",
+        "CONNECTMETERINGPOINT_V1_STEP_2": "Confirmation of request for connection of metering point (RSM-021)",
+        "CONNECTMETERINGPOINT_V1_STEP_3": "Rejection of request for connection of metering point (RSM-021)",
+        "CONNECTMETERINGPOINT_V1_STEP_4": "Notification of connection of metering point (RSM-022)",
+        "CUSTOMERMOVEIN_V1_STEP_1": "Request Change of Supplier (RSM-001)",
+        "CUSTOMERMOVEIN_V1_STEP_2": "Confirm request Change of Supplier (RSM-001)",
+        "CUSTOMERMOVEIN_V1_STEP_3": "Reject request Change of Supplier (RSM-001)",
+        "CUSTOMERMOVEIN_V1_STEP_4": "Metering point master data information (RSM-022)",
+        "CUSTOMERMOVEIN_V1_STEP_5": "Customer master data information (RSM-028)",
+        "CUSTOMERMOVEIN_V1_STEP_6": "Price link information (RSM-031)",
+        "CUSTOMERMOVEIN_V1_STEP_7": "Request update customer master data (RSM-027)",
+        "CUSTOMERMOVEIN_V1_STEP_8": "Approve update customer master data (RSM-027)",
+        "CUSTOMERMOVEIN_V1_STEP_9": "Reject update customer master data (RSM-027)",
+        "CUSTOMERMOVEIN_V1_STEP_10": "Generic Notification (RSM-004)",
+        "CUSTOMERMOVEIN_V1_STEP_11": "Characteristics of a Customer at an AP (RSM-028)",
+        "CUSTOMERMOVEIN_V1_STEP_12": "Generic Notification (RSM-004)",
+        "UPDATEMASTERDATACONSUMER_V1_STEP_1": "Request change customer characteristics (RSM-027)",
+        "UPDATEMASTERDATACONSUMER_V1_STEP_2": "Approve change customer characteristics (RSM-027)",
+        "UPDATEMASTERDATACONSUMER_V1_STEP_3": "Reject change customer characteristics (RSM-027)",
+        "UPDATEMASTERDATACONSUMER_V1_STEP_4": "Characteristics of a Customer at an AP (RSM-028)",
         "UNKNOWN": "Unknown Step"
       },
       "details": {
