feat: notifications - clear all (#2066)

--- a/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/da.json
@@ -29,6 +29,7 @@
   "notificationsCenter": {
     "headline": "Notifikationer",
     "noNotifications": "Ingen notifikationer",
+    "markAllAsRead": "Marker alle som læst",
     "notification": {
       "markAsRead": "Marker som læst",
       "BalanceResponsibilityActorUnrecognized": {
