--- a/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
+++ b/libs/dh/globalization/assets-localization/src/assets/i18n/en.json
@@ -29,6 +29,7 @@
   "notificationsCenter": {
     "headline": "Notifications",
     "noNotifications": "No notifications",
+    "markAllAsRead": "Mark all as read",
     "notification": {
       "markAsRead": "Mark as read",
       "BalanceResponsibilityActorUnrecognized": {
